<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_height="fill_parent" 
		android:layout_width="fill_parent"
		>
		
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	    
	    <!-- RESPONDENT DATA -->
	    <TextView
			android:id="@+id/tRespondentInfo" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Respondent Information"
			android:textColor="@color/hltGreen"
			android:textSize="20sp"
			android:textStyle="bold"
			>
		</TextView>
		
		<TextView
			android:id="@+id/tRespName" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="First name(s):"
			android:textColor="@color/hltOrange"
			android:imeOptions="actionNext"
			>
		</TextView>
		
		<EditText
	        android:id="@+id/eRespName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textSize="30sp"
	        android:textStyle="normal"
	        android:imeOptions="actionNext"
	        android:inputType="textCapWords"
	        android:hint="@string/nameHintResp"
	        />
		
		<TextView
			android:id="@+id/tRespSurname" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Surname(s): "
			android:textColor="@color/hltOrange"
			>
		</TextView>
		
		<EditText
	        android:id="@+id/eRespSurname"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textSize="30sp"
	        android:textStyle="normal"
	        android:imeOptions="actionNext"
	        android:inputType="textCapWords"
	        android:hint="@string/surnameHintResp"
	        />
		
		<TextView
			android:id="@+id/tRespAge" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Age:"
			android:textColor="@color/hltOrange"
			>
		</TextView>
		
		<EditText
	        android:id="@+id/eRespAge"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textSize="30sp"
	        android:textStyle="normal"
	        android:imeOptions="actionNext"
	        android:inputType="number"
            android:digits="1234567890"
            android:maxLength="2"
            android:hint="@string/ageHintResp"
	        />
	        
	    <TextView
			android:id="@+id/tRespMobile" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Mobile number: (optional)"
			android:textColor="@color/hltOrange"
			>
		</TextView>
		
		<EditText
	        android:id="@+id/eRespMobile"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textSize="30sp"
	        android:textStyle="normal"
	        android:inputType="number"
            android:digits="1234567890"        
	        android:hint="@string/mobileHintResp"
	        android:imeOptions="actionNext"
            android:maxLength="10"
	        />

		<TextView
			android:id="@+id/tRespEmail" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Email address: (optional)"
			android:textColor="@color/hltOrange"
			>
		</TextView>
		
		<EditText
	        android:id="@+id/eRespEmail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textSize="30sp"
	        android:textStyle="normal"
	        android:imeOptions="actionDone"
	        android:inputType="textEmailAddress"
	        android:hint="@string/emailHintResp"
	        />
	        
	   	<TextView
			android:id="@+id/tRespAccent" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Spoken accent: "
			android:textColor="@color/hltOrange"
			>
		</TextView>
		
		<Spinner
			android:id="@+id/spAccent"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/accentPrompt"
			android:entries="@array/accentList" 
			>
		</Spinner>
	        
	    <TextView
			android:id="@+id/tRespGender" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Gender: "
			android:textColor="@color/hltOrange"
			>
		</TextView>
		
		<Spinner
			android:id="@+id/spGender"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:prompt="@string/genderPrompt"
			android:entries="@array/genderList" 
			>
		</Spinner>
		
		<!-- Terms and Conditions-->
		
		<TextView
			android:id="@+id/tTerms" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Terms and Conditions: "
			android:textColor="@color/hltOrange"
			>
		</TextView>
		
		<Button android:id="@+id/bReadTerms" 
				android:text="@string/readTerms" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				android:textColor="@color/red"
				>
		</Button>
		
		<CheckBox android:id="@+id/cTerms"
			 android:text="@string/termText"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:textColor="@color/red"
			/>
		
		
	
		<TextView
			android:id="@+id/tProfileIDHeading" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="Profile ID: "
			android:textColor="@color/hltOrange"
			>
		</TextView>
		
		<TextView
			android:id="@+id/tProfileKey" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/profileKey"
			android:textColor="@color/androidGrey1"
			>
		</TextView>
		
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/hltGreen"
		    android:layout_marginTop="20sp"
		    android:paddingTop="10sp"
		    android:paddingBottom="10sp"
		    android:paddingLeft="10sp"
		    android:paddingRight="10sp"
		    >
		
			<Button android:id="@+id/bLoadProfile" 
				android:text="@string/loadProfile" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				>
			</Button>
		</LinearLayout>
				
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/hltBlue"
		    android:layout_marginTop="20sp"
		    android:paddingTop="10sp"
		    android:paddingBottom="10sp"
		    android:paddingLeft="10sp"
		    android:paddingRight="10sp"
		    >
		
			<Button android:id="@+id/bReset" 
				android:text="@string/reset" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				>
			</Button>
			
			<Button android:id="@+id/bNext" 
				android:text="@string/nextWithCondition"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				>
			</Button>
		</LinearLayout>
		
		<!-- Status bar -->
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/hltOrange"
		    android:layout_marginTop="20sp"
		    android:paddingTop="10sp"
		    android:paddingBottom="10sp"
		    android:paddingLeft="10sp"
		    android:paddingRight="10sp"
		    >
		
		<TextView
			android:id="@+id/tStatusBar" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/statusText"
			android:textColor="@android:color/black"
			>
		</TextView>

		</LinearLayout>
	
	</LinearLayout>
</ScrollView>